# CourseCraftAI

./: .firebaserc  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  threat_model.md
.agents/: CONTEXT.md
.agents/skills/stride-threat-model/: SKILL.md
.semgrep/: rules.yaml
agent-backend/coursecraft-agent/: README.md  agents-cli-manifest.yaml  pyproject.toml
agent-backend/coursecraft-agent/app/: agent.py  fast_api_app.py
agent-backend/coursecraft-agent/app/app_utils/: telemetry.py  typing.py
frontend/: apphosting.yaml  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/generate-recommendation/: route.ts
frontend/src/app/api/generate-roadmap/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: AiGenerationSequence.tsx  ConfirmModal.tsx  ModuleDetailModal.tsx  ProgressBar.tsx  RoadmapTimeline.tsx  StatCard.tsx
frontend/src/context/: RoadmapContext.tsx
frontend/src/utils/: security.ts
tests/: test_agent.py
